A lot of variables renaming