@@ -5,13 +5,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 
 import com.scoutress.KaimuxAdminStats.entity.discordTickets.DailyDiscordTickets;
 import com.scoutress.KaimuxAdminStats.entity.discordTickets.DiscordTicketsReactions;
 import com.scoutress.KaimuxAdminStats.entity.employees.EmployeeCodes;
+import com.scoutress.KaimuxAdminStats.repositories.discordTickets.DailyDiscordTicketsRepository;
 import com.scoutress.KaimuxAdminStats.repositories.discordTickets.DiscordTicketsReactionsRepository;
-import com.scoutress.KaimuxAdminStats.repositories.discordTickets.DiscordTicketsRepository;
 import com.scoutress.KaimuxAdminStats.services.DataExtractingService;
 import com.scoutress.KaimuxAdminStats.services.discordTickets.DiscordTicketsService;
 
@@ -21,12 +22,12 @@ import jakarta.transaction.Transactional;
 public class DiscordTicketsServiceImpl implements DiscordTicketsService {
 
   public final DataExtractingService dataExtractingService;
-  public final DiscordTicketsRepository discordTicketsRepository;
+  public final DailyDiscordTicketsRepository discordTicketsRepository;
   public final DiscordTicketsReactionsRepository discordTicketsReactionsRepository;
 
   public DiscordTicketsServiceImpl(
       DataExtractingService dataExtractingService,
-      DiscordTicketsRepository discordTicketsRepository,
+      DailyDiscordTicketsRepository discordTicketsRepository,
       DiscordTicketsReactionsRepository discordTicketsReactionsRepository) {
     this.dataExtractingService = dataExtractingService;
     this.discordTicketsRepository = discordTicketsRepository;
@@ -56,57 +57,37 @@ public class DiscordTicketsServiceImpl implements DiscordTicketsService {
   }
 
   public List<DailyDiscordTickets> convertData(List<DiscordTicketsReactions> rawData) {
-    Map<Long, Map<LocalDate, Long>> groupedData = rawData
-        .stream()
-        .collect(Collectors
-            .groupingBy(
-                DiscordTicketsReactions::getDiscordId,
-                Collectors
-                    .groupingBy(
-                        reaction -> reaction
-                            .getDateTime()
-                            .toLocalDate(),
-                        Collectors
-                            .mapping(
-                                DiscordTicketsReactions::getTicketId,
-                                Collectors
-                                    .toSet()))))
-        .entrySet()
-        .stream()
-        .collect(Collectors
-            .toMap(
-                Map.Entry::getKey,
-                entry -> entry
-                    .getValue()
-                    .entrySet()
-                    .stream()
-                    .collect(Collectors
-                        .toMap(
-                            Map.Entry::getKey,
-                            e -> (long) e
-                                .getValue()
-                                .size()))));
+    Map<Short, Map<LocalDate, Long>> groupedData = rawData.stream()
+        .collect(Collectors.groupingBy(
+            reaction -> reaction.getDiscordId().shortValue(),
+            Collectors.groupingBy(
+                reaction -> reaction.getDateTime().toLocalDate(),
+                Collectors.mapping(
+                    DiscordTicketsReactions::getTicketId,
+                    Collectors.toSet()))))
+        .entrySet().stream()
+        .collect(Collectors.toMap(
+            Map.Entry::getKey,
+            entry -> entry.getValue().entrySet().stream()
+                .collect(Collectors.toMap(
+                    Map.Entry::getKey,
+                    e -> (long) e.getValue().size()))));
 
-    return groupedData
-        .entrySet()
-        .stream()
-        .flatMap(
-            adminEntry -> adminEntry
-                .getValue()
-                .entrySet()
-                .stream()
-                .map(
-                    dateEntry -> new DailyDiscordTickets(
-                        null,
-                        adminEntry
-                            .getKey(),
-                        String
-                            .valueOf(dateEntry
-                                .getValue()),
-                        dateEntry
-                            .getKey())))
-        .collect(Collectors
-            .toList());
+    return groupedData.entrySet().stream()
+        .flatMap(adminEntry -> adminEntry.getValue().entrySet().stream()
+            .map(dateEntry -> createDailyDiscordTicket(
+                adminEntry.getKey(),
+                dateEntry.getKey(),
+                dateEntry.getValue())))
+        .collect(Collectors.toList());
+  }
+
+  private DailyDiscordTickets createDailyDiscordTicket(Short aid, LocalDate date, Long ticketCount) {
+    return new DailyDiscordTickets(
+        null,
+        aid,
+        ticketCount.intValue(),
+        date);
   }
 
   public List<DiscordTicketsReactions> mapDiscordToEmployeeIds(
@@ -171,20 +152,17 @@ public class DiscordTicketsServiceImpl implements DiscordTicketsService {
   public void removeDuplicateTicketsData() {
     List<DailyDiscordTickets> allReactions = discordTicketsRepository.findAll();
 
-    Map<List<Object>, List<Long>> groupedReactions = allReactions.stream()
+    Map<Pair<Short, LocalDate>, List<Long>> groupedReactions = allReactions.stream()
         .collect(Collectors.groupingBy(
-            reaction -> List.of(
-                reaction.getEmployeeId(),
-                reaction.getDate()),
-            Collectors.mapping(
-                DailyDiscordTickets::getId,
-                Collectors.toList())));
+            reaction -> Pair.of(reaction.getAid(), reaction.getDate()),
+            Collectors.mapping(DailyDiscordTickets::getId, Collectors.toList())));
 
-    List<Long> duplicateIds = groupedReactions.values()
-        .stream()
+    List<Long> duplicateIds = groupedReactions.values().stream()
         .flatMap(ids -> ids.stream().skip(1))
         .collect(Collectors.toList());
 
-    discordTicketsRepository.deleteAllById(duplicateIds);
+    if (!duplicateIds.isEmpty()) {
+      discordTicketsRepository.deleteAllById(duplicateIds);
+    }
   }
 }
